--- a/Resource/Skeleton/Source/Public/static/css/code.css
+++ b/Resource/Skeleton/Source/Public/static/css/code.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: Pre;
-    src: url('../Font/DroidSansMono.woff') format('woff');
+    src: url('../font/DroidSansMono.woff') format('woff');
     font-weight: normal;
     font-style: normal;
 }
