--- a/Resource/Skeleton/Source/Public/static/css/ui.css
+++ b/Resource/Skeleton/Source/Public/static/css/ui.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: Text;
-    src: url('../Font/Palladio.woff') format('woff');
+    src: url('../font/Palladio.woff') format('woff');
     font-weight: normal;
     font-style: normal;
 }
@@ -85,7 +85,7 @@ header {
     text-shadow: #000 0 0 15px;
     line-height: 10em;
     margin-bottom: 6em;
-    background: transparent url('../Image/Header.jpg') 50% 50% no-repeat;
+    background: transparent url('../image/header.jpg') 50% 50% no-repeat;
     background-size: cover;
     border: rgb(211, 54, 130) solid;
     border-width: 2px 0 .75em 0;
